package modele.client;

public class ClientPhysique extends Client{

	public ClientPhysique(String nom, String adrs, String num, String mail) {
		super(nom, adrs, num, mail);
	}

}
